syntax = "proto3";
package stride.liquidgov;

import "gogoproto/gogo.proto";
import "cosmos/gov/v1beta1/gov.proto";

option go_package = "github.com/Stride-Labs/stride/v11/x/liquidgov/types";

message CastVotesCallback {
  string host_zone_id = 1;
  uint64 proposal_id = 2;
  repeated cosmos.gov.v1beta1.WeightedVoteOption options = 3 [(gogoproto.nullable) = false];
}
